// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineButton renders as expected if full width 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--block"
  onClick={[Function]}
  type="button"
>
  
  Test Outline fullWidth Button
</button>
`;

exports[`OutlineButton renders as expected when passing a large size 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--large"
  onClick={[Function]}
  type="button"
>
  
  Test Outline Large Button
</button>
`;

exports[`OutlineButton renders as expected when passing a light skin 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--light"
  onClick={[Function]}
  type="button"
>
  
  Test Outline Light Button
</button>
`;

exports[`OutlineButton renders as expected when passing disabled as true 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Disabled Button 1
</button>
`;

exports[`OutlineButton renders as expected when passing the Search icon 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal"
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-icon lab-icon--Search lab-icon--white lab-btn__icon"
  >
    <svg
      aria-hidden={true}
      className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
      fill="currentColor"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.5 3a5.5 5.5 0 0 1 4.23 9.02l4.12 4.13a.5.5 0 0 1-.63.76l-.07-.06-4.13-4.12A5.5 5.5 0 1 1 8.5 3Zm0 1a4.5 4.5 0 1 0 0 9 4.5 4.5 0 0 0 0-9Z"
        fill="currentColor"
      />
    </svg>
  </span>
  Test Outline magnifying-glass Button
</button>
`;

exports[`OutlineButton renders as expected when tabIndex is passed 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal"
  onClick={[Function]}
  tabIndex={1}
  type="button"
>
  
  Test tabIndex
</button>
`;

exports[`OutlineButton renders with base props 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal"
  onClick={[Function]}
  type="button"
>
  
  Test Outline Button
</button>
`;
